--- a/exercicios/desafio012/estilo/style.css
+++ b/exercicios/desafio012/estilo/style.css
@@ -58,6 +58,10 @@ section {
     font-size: 3.5vw;
 }
 
+section > p {
+    padding-bottom: 2em;
+}
+
 section.normal {
     background-color: #fff;
     color: #000;
@@ -66,12 +70,26 @@ section.normal {
 section.imagem {
     background-color: rgb(27, 27, 27);
     color: #fff;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0,  0, 0.473);
+    background-attachment: fixed;
 }
 
 section.imagem > p {
     display: inline-block;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.384);
+    background-color: rgba(0, 0, 0, 0.514);
+    text-shadow: 1px 1px 0px #000;
+}
+
+section#img01 {
+    background-image: url(../imagens/background001.jpg);
+    background-position: right center;
+    background-size: cover;
+}
+
+section#img02 {
+    background-image: url(../imagens/background002.jpg);
+    background-size: cover;
 }
 
 footer {
